--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 <resources>
   <string name="app_name">Mirror</string>
   <string name="home_name">Mirror Home</string>
+  <string name="home_name_compact">Compact Mirror Home</string>
   <string name="unknown_ip_address">Unknown IP Address</string>
 </resources>
